# meta-learning-system

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  agents.md  akms_config.yaml.example
.gemini/: settings.json
.omc/: project-memory.json
.omc/sessions/: 02ad1fe9-e229-4aa1-9d51-16ca0955a38f.json  08e03b1e-b66a-4741-89c4-cec23fe92670.json  0e94d7bc-1abc-4673-81c4-c6b6e1b29636.json  1927eacd-47c2-4d8b-810e-4d3d19f4d32a.json  1cc7f0d0-341d-4f78-98d9-45a820d33c08.json  2212e52b-d285-41bd-af2a-d975d8aa981d.json  221f2fd6-8a19-4c76-9979-af29d93fec9b.json  26198504-f91c-4f4a-aa98-fb72f78df573.json  2ce43383-a192-4f42-b9f4-71c7f208c146.json  311ea101-ceb9-4e90-922f-b9cc21f30666.json  343be4d0-5938-4ad0-bd81-e9df645d80bf.json  3b102927-46ff-434e-aac4-25b8fae065c5.json  49550766-9e4d-4269-aa95-b8cdd6b0d5a6.json  49ffb033-ef35-4d55-8976-d0c4dae9f935.json  4a818437-e2d3-4a64-b4f3-8a941941d044.json  4c1da2b4-b3fe-4487-aca3-097521370d2f.json  507282e0-cd12-4a9d-92d3-0c120af21bfc.json  528726bb-31dd-4b42-b67a-5b8773e86e0f.json  52b37d11-c0e0-4f92-8766-d91ad831b5b6.json  5456d6f9-2b8a-4c3c-a954-91f403081104.json  56ec0305-62b6-453f-83ff-0c5fe2b7deb3.json  5fe03210-8ac9-4228-9b98-ccd52b0588fe.json  60060873-46ab-4cff-aa7b-dc41e1b0ba2c.json  6028b697-b54c-4cb3-b602-2f841bcbfbe6.json  61127f25-d6ee-4645-9da7-f14486a84d45.json  (+51 more)
loom/: .gitignore  README.md  pyproject.toml
loom/src/loom/: __init__.py  cli.py  models.py  providers.py  runtime.py  scoring.py  storage.py
loom/tests/: conftest.py  test_cli.py  test_monitor.py  test_probe.py  test_runtime.py
(+3 files in other folders)
